<resources>
    <string name="app_name">Territory Assistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuration</string>
    <string name="title_activity_dirigentes">Conductors</string>
    <string name="title_activity_novo_dirigente">New Conductor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_editar_dirigente">Edit Conductor</string>
    <string name="title_activity_territorios">Territories</string>
    <string name="title_activity_novo_territorio">New territory</string>
    <string name="title_activity_editar_territorio">Edit territory</string>
    <string name="title_activity_grupos">Leaving group</string>
    <string name="title_activity_novo_grupo">New group</string>
    <string name="title_activity_editar_grupo">Edit group</string>
    <string name="title_activity_designar">Designate territory</string>
    <string name="title_activity_ver_designados">History</string>
    <string name="title_activity_fechar_designacao">Close designation</string>
    <string name="title_activity_detalhes_territorio">Territory details</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sugerir">Suggest territory</string>
    <string name="title_activity_historio">History</string>
    <string name="title_activity_foto_territorio">Territory\'s photo</string>
    <string name="title_activity_configuracoes">Settings</string>
    <!-- Frases da aplicação de arquivos java -->
    <string name="codigos">Codes</string>
    <string name="codigo">Code</string>
    <string name="enviar_dados_para">Send data to…</string>
    <string name="observacoes">Observations</string>
    <string name="designacao">Designations</string>
    <string name="data_inicio">Start date</string>
    <string name="devolucao">Restitution</string>


    <string name="data_fim">End date</string>
    <string name="registros_marcados_aba_designados">The records were marked on the Designate tab.</string>
    <string name="territorio_devolvido">Territory returned</string>
    <string name="territorios_designados_data">Territories designate for the date</string>
    <string name="verificar_territorios_estao_irmao">Hello brother, would like verify that the following territories are still with the brother?</string>
    <string name="configuracoes_salvas">Saved settings</string>
    <string name="selecionar_territorios">Select territories</string>
    <string name="preencha_data_inicio">Enter start date</string>
    <string name="selecione_territorios">Select the territories</string>
    <string name="preencha_data_fim">Enter end date</string>
    <string name="data_fim_maior_igual_data_inicio">End date must be greater or equal to start date</string>
    <string name="tem_certeza_deletar_designacao">Are you sure you want to delete this designation?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="OK">OK</string>
    <string name="dirigente_ja_designado">This conductor has been designated</string>
    <string name="dirigente_atualizado">Conductor %1$s updated.</string>
    <string name="nome_obrigatorio">Name is required</string>
    <string name="dirigente_inserido">Conductor %1$s inserted.</string>
    <string name="selecione">Select..</string>
    <string name="grupo_atualizado">Group %1$s updated.</string>
    <string name="grupo_associado_territorio">This group is already associated with a territory</string>
    <string name="grupo_inserido">Group %1$s inserted.</string>
    <string name="foto_territorio">Territory’s photo</string>
    <string name="tem_certeza_deletar_registro">Are you sure you want to delete this record?</string>
    <string name="quantos_territorios_deseja_no_campo">Tell how many territories you want in the "Number of territories"</string>
    <string name="nao_possivel_selecionar_numero_terriorios">Unable to select the desired number of territories</string>
    <string name="clique_antes_sugerir_terriorios">Click before in suggest territories</string>
    <string name="nao_mais_territorios_serem_designados">There are no more territories to be designated</string>
    <string name="erro_exportar_dados">Error exporting data</string>
    <string name="dados_importados">Imported data</string>
    <string name="erro_importar_dados">Error importing data</string>
    <string name="dados_exportados">Exported data</string>
    <string name="necessario_registrar_grupos">Must register leaving groups</string>
    <string name="necessario_cadastrar_dirigentes_territorios">Must register conductor and territories</string>
    <string name="designados">Designated</string>
    <string name="dirigentes">Conductors</string>
    <string name="ultimas_acoes">Last actions</string>
    <string name="territorio_inserido">Territory %1$s inserted</string>
    <string name="territorio_ja_existe">Territory %1$s already exist</string>
    <string name="territorio_atualizado">Territory %1$s updated</string>
    <string name="lista_vizinhos_alteradao">The list of neighbors has changed. Click the save button before leaving</string>
    <string name="foto_territorio_alterada">Photo of territory has changed. Save the change before leaving the screen</string>
    <string name="todos_os_grupos">All groups</string>
    <string name="certeza_deletar_territorio">Are you sure that want delete this territory?</string>
    <string name="territorio_ja_designado">This territory alread was designated</string>
    <string name="territorios_vizinhos">Neighbors territories</string>
    <string name="sem_territorios_vizinhos">There no neighbors configurated for this territory</string>
    <string name="cadastre_um_dirigente">Register at least one conductor</string>
    <!-- Frases da aplicacao de xmls -->
    <string name="texto_padrao_dirigente">Pattern text for conductor</string>
    <string name="numero_dias_descanso_territorio">Number of days of rest for territory</string>
    <string name="dirigente">Publisher</string>
    <string name="data_inicio_tres_pontos">Start date…</string>
    <string name="designar">Designate</string>
    <string name="nome_dirigente">Conductor’s name</string>
    <string name="email_dirigente">Conductor’s email</string>
    <string name="gravar">Save</string>
    <string name="voltar">Return</string>
    <string name="nome_grupo">Group’s name</string>
    <string name="codigo_territorio">Territory\'s code</string>
    <string name="fechar">Close</string>
    <string name="deletar">Delete</string>
    <string name="grupo">Group</string>
    <string name="suspenso">Suspend</string>
    <string name="enter_adicionar_linhas">Push enter to add lines…</string>
    <string name="selecionar_vizinhos">Select neighbors</string>
    <string name="numero_de_territorios">Number of territories</string>
    <string name="somente_vizinhos">Only neighboring territories</string>
    <string name="respeitar_data_limite">Respect the limit date</string>
    <string name="sugerir_territorios">Suggest territory</string>
    <string name="continuar">Continue</string>
    <string name="ordenar_por_data">Sort by date</string>
    <string name="somente_nao_designados">Only not designated</string>
    <string name="ultima_data">Last date:</string>
    <string name="digite_codigo_territorio">Enter code of territory …</string>
    <string name="selecione_abaixo_para_fechar">Select below to close …</string>
    <string name="selecione_enviar_mensagem">Select to send a message …</string>
    <string name="nao_ha_designacao_aberto">There is no designation open. To designate a territory, open the menu in the upper left of your screen.</string>
    <string name="territorios">Territories</string>
    <string name="acao">Action</string>
    <string name="data">Date</string>
    <string name="grupos_de_saida">Leaving group</string>
    <string name="designar_territorios">Designate territories</string>
    <string name="historico">History</string>
    <string name="funcoes">Functions</string>
    <string name="ferramentas">Tools</string>
    <string name="exportar_dados">Exported data</string>
    <string name="importar_dados">Imported data</string>
    <string name="marcar_registro">Mark record</string>
    <string name="desmarcar_registro">Clear record</string>
    <string name="ver_vizinhos">See neighbors</string>
    <string name="editar">Edit</string>
    <string name="enviar_mensagem">Send mensage</string>
    <string name="marcar_registros">Mark records</string>

    <string name="type1">Morning</string>
    <string name="type2">Afternoon</string>


    <string name="text_about">Aplicativo destinado à gerência de territórios para pregação. É destinado ao servo de territórios. \nPrincipais finalidades: \n- Designação de territórios;\n- Histórico para posteriores consultas;\n- Opção para sugestão de territórios a serem trabalhados; \n- Territórios próximos (configure os territórios vizinhos); \n- É possível fazer backups dos dados; \n\n- Módulo separado para transferir os dados para um arquivo PDF:\nhttps://drive.google.com/file/d/0B93WFEtl7HpScUl4ZjJSdEhjVms/view?usp=sharing\n\nEsse aplicativo NÃO dispensa o uso do formulário S-13.\n</string>
    <string name="text_developer">Developer: Moisés de Souza\nEdited for: Charllys Fernandes\nTranlate to italian: Francesco Sabatini</string>
    <string name="label_about">About</string>
    <string name="cod_error">Code is empty</string>
    <string name="error_novo_grupo">Nome do grupo é obrigatório</string>

</resources>