<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_novo_territorio"
    tools:context="com.application.territoryassistant.territorios.NovoTerritorioActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/img_foto_territorio"
            android:layout_marginTop="20dp"
            android:background="#80000000"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ver_foto"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_above="@+id/check_suspenso"
            android:background="#80000000"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_cod_territorio"
            android:hint="@string/codigo_territorio"
            android:layout_toRightOf="@+id/img_foto_territorio"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:singleLine="true"
            android:layout_alignTop="@+id/img_foto_territorio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grupo"
            android:id="@+id/lab_grupo"
            android:textSize="20sp"
            android:layout_below="@+id/txt_cod_territorio"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/img_foto_territorio"
            android:layout_toRightOf="@+id/img_foto_territorio" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_grupos"
            android:spinnerMode="dialog"
            android:layout_toRightOf="@+id/img_foto_territorio"
            android:layout_toEndOf="@+id/img_foto_territorio"
            android:layout_below="@+id/lab_grupo" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suspenso"
            android:id="@+id/check_suspenso"
            android:checked="false"
            android:layout_below="@+id/img_foto_territorio"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacoes"
            android:id="@+id/lab_observacoes"
            android:textSize="20sp"
            android:layout_below="@+id/check_suspenso"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="HardcodedText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_observacoes"
            android:layout_below="@+id/lab_observacoes"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/enter_adicionar_linhas" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecionar_vizinhos"
            android:id="@+id/btn_selecionar_vizinhos"
            android:singleLine="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_observacoes"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</ScrollView>