<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_novo_grupo"
    tools:context="com.application.territoryassistant.grupos.NovoGrupoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lab_mensagem"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/lab_nome_grupo"
        android:layout_alignEnd="@+id/lab_nome_grupo"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_grupo"
        android:id="@+id/lab_nome_grupo"
        android:textSize="30sp"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/lab_mensagem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_nome_grupo"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lab_nome_grupo"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravar"
        android:id="@+id/btn_gravar"
        android:layout_below="@+id/txt_nome_grupo"
        android:layout_alignRight="@+id/txt_nome_grupo"
        android:layout_alignEnd="@+id/txt_nome_grupo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:id="@+id/btn_voltar"
        android:layout_alignTop="@+id/btn_gravar"
        android:layout_toLeftOf="@+id/btn_gravar"
        android:layout_toStartOf="@+id/btn_gravar" />

</RelativeLayout>